--- a/pom.xml
+++ b/pom.xml
@@ -90,12 +90,12 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://ec2-13-234-217-62.ap-south-1.compute.amazonaws.com:8081/repository/mvnhostRelease/</url>
+	      <url>http://http://ec2-35-154-196-205.ap-south-1.compute.amazonaws.com:8081/repository/mvnhostRelease/</url>
 	    </repository>
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://ec2-13-234-217-62.ap-south-1.compute.amazonaws.com:8081/repository/mvnhostSnopshot/</url>
+	      <url>http://http://ec2-35-154-196-205.ap-south-1.compute.amazonaws.com:8081/repository/mvnhostSnopshot/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 	
